@startuml

class Int
class Unit
class Fruit
Int -right[hidden]- Unit
Unit -right[hidden]- Fruit
class Apple
class Orange
Apple -right[hidden]- Orange

class "Int?"
class "Unit?"
class "Fruit?"
"Int?" -right[hidden]- "Unit?"
"Unit?" -right[hidden]- "Fruit?"
class "Apple?"
class "Orange?"
"Apple?" -right[hidden]- "Orange?"

Any <|--- Int
Any <|--- Unit
Any <|--- Fruit
Fruit <|--- Apple
Fruit <|--- Orange
Apple <|--- Nothing
Orange <|--- Nothing
Int <|--- Nothing
Unit <|--- Nothing

"Fruit?" <|--- "Apple?"
"Fruit?" <|--- "Orange?"
"Any?" <|--- "Int?"
"Any?" <|--- "Unit?"
"Any?" <|--- "Fruit?"
"Apple?" <|--- "Nothing?"
"Orange?" <|--- "Nothing?"
"Int?" <|--- "Nothing?"
"Unit?" <|--- "Nothing?"

@enduml
